httpd-another/httpd-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: httpd-another-service
spec: 
  selector: 
    app: http-another-server
  ports: 
    - protocol: TCP
      port: 8082
      targetPort: 80
