httpd-another/httpd-ingress-updates.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-another-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpd-another-service
            port:
              number: 8082
