httpd-another/httpd-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: httpd-another-ingress
spec:
  rules:
  - host: httpd-another.com
    http: 
      paths:
      - backend: 
          serviceName: httpd-another-service
          servicePort: 8082
